[package]
name = "zenv"
version = "0.5.0"
description = "Dotenv (.env) loader written in rust"
authors = ["numtostr <vikasraj1911@gmail.com>"]
edition = "2018"
homepage = "https://github.com/numToStr/zenv/"
repository = "https://github.com/numToStr/zenv/"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "zenv"
required-features = ["cli"]

[dependencies]
pico-args = { version = "0.4.0", optional = true }

[features]
cli = ["pico-args"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
