[package]
name = "zenv"
version = "0.8.0"
description = "Dotenv (.env) loader written in rust"
authors = ["numToStr <sudo@vikasraj.dev>"]
edition = "2018"
homepage = "https://github.com/numToStr/zenv"
repository = "https://github.com/numToStr/zenv"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["env", "environment", "dotenv", "config", "cli"]
categories = ["web-programming", "command-line-utilities"]
exclude = [
    "Makefile",
    "tests/**",
    ".github/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "zenv"
required-features = ["cli"]

[dependencies]
lexopt = { version = "0.2.0", optional = true }

[features]
cli = ["lexopt"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
